objects/Salesview__c.object
<CustomObject>
    <description>Relationship between customers and respective practice sales areas</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Salesview</relationshipLabel>
        <relationshipName>Salesview</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Group__c</fullName>
        <label>Authorization Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Code__c</fullName>
        <label>Distribution Channel Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Authorization__c</fullName>
        <label>Division Authorization</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms1__c</fullName>
        <label>Incoterms1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_2__c</fullName>
        <label>Incoterms 2</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Group__c</fullName>
        <label>Price Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Number__c</fullName>
        <label>SAP Customer Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrg_DistChann_Division__c</fullName>
        <description>Concatenated key used as External Id for integration work</description>
        <externalId>true</externalId>
        <label>IDEXX Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <label>Sales District</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization_Code__c</fullName>
        <label>Sales Organization Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Salesview</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Salesview Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesview</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>